--- a/src/app/car-edit/car-edit.component.html
+++ b/src/app/car-edit/car-edit.component.html
@@ -9,6 +9,13 @@
           <input matInput placeholder="Car Name" [(ngModel)]="car.name"
                  required name="name" #name>
         </mat-form-field>
+      <br>
+<!-- Propietario -->
+        <mat-form-field>
+          <input matInput placeholder="Owner DNI" [(ngModel)]="car.ownerDni"
+                  name="ownerDni" #ownerDni>
+        </mat-form-field>
+
       </mat-card-content>
       <mat-card-actions>
         <button mat-raised-button color="primary" type="submit"
