--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -6,7 +6,9 @@
         <img mat-list-avatar src="{{car.giphyUrl}}" alt="{{car.name}}">
         <h3 mat-line>
           <a mat-button [routerLink]="['/car-edit', car.id]">{{car.name}}</a>
+          <small>Propietario: {{car?.ownerDni}}</small>
         </h3>
+   
       </mat-list-item>
     </mat-list>
   </mat-card-content>
