--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -6,7 +6,8 @@
         <img mat-list-avatar src="{{car.giphyUrl}}" alt="{{car.name}}">
         <h3 mat-line>
           <a mat-button [routerLink]="['/car-edit', car.id]">{{car.name}}</a>
-          <small>Propietario: {{car?.ownerDni}}</small>
+          {{car?.ownerDni}}
+          <!-- <a mat-button [routerLink]="['/owner-edit', car.ownerDni]">Owner: {{car?.ownerDni}} </a> -->
         </h3>
    
       </mat-list-item>
