--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <mat-toolbar color="primary">
   <span>Welcome to {{title}}!</span>
+  <span class="example-fill-remaining-space"></span>
+  <span><a mat-button routerLink="/car-list">Cars</a></span>
+  <span> <a mat-button routerLink="/owner-list">Owners</a></span>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
